[tool.poetry]
name = "sapai"
version = "0.1.0"
description = "Super auto pets engine built with reinforment learning training in mind"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
keras = "^2.10.0"
torch = "^1.12.1"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
